# midi-warp

./: .gitignore  Gemfile  Pipfile  README.md  all_keys_listen.py  dissonance.cpp  gong_obs_plugin.py  listen.py  main.rb  pyproject.toml  python_dorian.py  raw_rtmidi.py  transform.py  transpose.py  volume_listen.py
_archive/: Makefile  README.md  dissonance.py  old_listen.py  old_listen2.py  transform.py  transpose.sh
backup/: dissonance_single.cpp
obs_plugin/: gong_obs_plugin.py  speak.vbs
obs_plugin/templates/: home.html  msg.html
templates/: _base.html  home.html  kill.html  record_start.html  record_stop.html
